fix right panel header on mobile

--- a/gomuksCatppuccinMocha.css
+++ b/gomuksCatppuccinMocha.css
@@ -1,7 +1,7 @@
 /*
  *
  * Catppuccin Mocha for gomuks
- * v1.2.2
+ * v1.2.3
  *
  * Theme by @vrkknn:vrkknn.net
  * https://github.com/Virkkunen/themes/
@@ -270,7 +270,11 @@ div.right-panel {
   & > div.right-panel-header {
     background-color: var(--ctp-base);
     border: unset;
-    height: 4rem;
+    height: 4.8rem;
+    
+    @media (width < 1024px) {
+      height: 4.2rem;
+    }
   }
 
   & > div.right-panel-content {
